--- a/20-exploratory-trees.Rmd
+++ b/20-exploratory-trees.Rmd
@@ -13,7 +13,7 @@ library(ape)   # for as.phylo
 if (interactive())  load("tcr_objects.Rdata")
 load("GTEx/gtex_objects.Rdata")
 figs_dir <- "figures/exploratory_trees/"
-dir.create(figs_dir, showWarnings = FALSE)
+dir.create(figs_dir, showWarnings = FALSE, recursive = TRUE)
 
 ```
 
